--- a/Inferring.ipynb
+++ b/Inferring.ipynb
@@ -330,8 +330,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The customer contacted support because they had a missing part when putting the lamp together.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "In the following review, why did the customer contact support? Please provide details.\n",
+    "The review is delimited with triple backticks.\n",
+    "\n",
+    "Review text: ```{lamp_review}```\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:24:38.162177Z",
+     "start_time": "2023-05-11T08:24:36.237421Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Item\": \"lamp\",\n",
+      "  \"Brand\": \"Lumina\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "## Extract product and company name from customer reviews\n",
     "\n",
@@ -340,10 +382,10 @@
     "- Item purchased by reviewer\n",
     "- Company that made the item\n",
     "\n",
-    "The review is delimited with triple backticks. \\\n",
-    "Format your response as a JSON object with \\\n",
+    "The review is delimited with triple backticks.\n",
+    "Format your response as a JSON object with\n",
     "\"Item\" and \"Brand\" as the keys.\n",
-    "If the information isn't present, use \"unknown\" \\\n",
+    "If the information isn't present, use \"unknown\"\n",
     "as the value.\n",
     "Make your response as short as possible.\n",
     "\n",
@@ -353,7 +395,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:28:14.208094Z",
+     "start_time": "2023-05-11T08:28:11.839829Z"
+    }
    }
   },
   {
@@ -367,8 +413,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"Sentiment\": \"positive\",\n",
+      "    \"Anger\": false,\n",
+      "    \"Item\": \"lamp with additional storage\",\n",
+      "    \"Brand\": \"Lumina\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Identify the following items from the review text:\n",
@@ -377,10 +436,10 @@
     "- Item purchased by reviewer\n",
     "- Company that made the item\n",
     "\n",
-    "The review is delimited with triple backticks. \\\n",
-    "Format your response as a JSON object with \\\n",
+    "The review is delimited with triple backticks.\n",
+    "Format your response as a JSON object with\n",
     "\"Sentiment\", \"Anger\", \"Item\" and \"Brand\" as the keys.\n",
-    "If the information isn't present, use \"unknown\" \\\n",
+    "If the information isn't present, use \"unknown\"\n",
     "as the value.\n",
     "Make your response as short as possible.\n",
     "Format the Anger value as a boolean.\n",
@@ -391,7 +450,57 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:29:43.441124Z",
+     "start_time": "2023-05-11T08:29:40.080214Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```yaml\n",
+      "Sentiment: positive\n",
+      "Anger: false\n",
+      "Item: lamp with additional storage\n",
+      "Brand: Lumina\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Identify the following items from the review text:\n",
+    "- Sentiment (positive or negative)\n",
+    "- Is the reviewer expressing anger? (true or false)\n",
+    "- Item purchased by reviewer\n",
+    "- Company that made the item\n",
+    "\n",
+    "The review is delimited with triple backticks.\n",
+    "Format your response as a YAML object with\n",
+    "\"Sentiment\", \"Anger\", \"Item\" and \"Brand\" as the keys.\n",
+    "If the information isn't present, use \"unknown\"\n",
+    "as the value.\n",
+    "Make your response as short as possible.\n",
+    "Format the Anger value as a boolean.\n",
+    "\n",
+    "Review text: '''{lamp_review}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:40:24.334261Z",
+     "start_time": "2023-05-11T08:40:21.751872Z"
+    }
    }
   },
   {
