Analyze Amazon review in French. Change alert news output to JSON.

--- a/Inferring.ipynb
+++ b/Inferring.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "import openai\n",
@@ -23,13 +23,14 @@
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
     "\n",
+    "openai.organization = os.getenv('OPENAI_ORGANIZATION')\n",
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-11T08:12:29.458844Z",
-     "start_time": "2023-05-11T08:12:29.259047Z"
+     "end_time": "2023-05-11T08:58:31.408826Z",
+     "start_time": "2023-05-11T08:58:31.398463Z"
     }
    }
   },
@@ -505,11 +506,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "outputs": [],
    "source": [
-    "## Inferring topics\n",
+    "amazon_review = \"\"\"\n",
+    "Amateurs de cafés sans être de fins connaisseurs mon conjoint et moi sommes des consommateurs réguliers de Starbucks comme de café Nespresso depuis plusieurs années.\n",
+    "Alors une fois le partenaria lancé entre les deux marques on ne pouvait que tester !\n",
     "\n",
+    "Le positif de cette expérience :\n",
+    "- Avec une machine Inissia Nespresso les dosettes sont parfaitement adaptées.\n",
+    "- Le goût : on valide sans s'extasier. C'est assez personnel les goûts de chacun mais si on apprécie les arômes de ces dosettes assez corsées (force 6 à 11 si vous voulez un repère Nespresso) on n'a pas vraiment senti les \"note de noisette\" ou \"note de caramel\" mises en avant sur les paquets.\n",
+    "En revanche le \"Starbucks Blonde\" (jaune) a été pour moi un vrai coup de cœur. Testé en espresso, lungo et même avec une pointe de lait c'est un délice ! Ajoutez une mousse de lait et vous êtes chez Starbucks !\n",
+    "Pour mon conjoint, c'est le house Blend (maron clair) qui a été le plus apprécié. Vendu avec \"une note de caramel\" qu'il n'a pas sentie, il a particulièrement apprécié la douceur de la gorgée puis l'arrière goût plus fort qui arrive après.\n",
+    "Bon chacun ses préférences et ses goûts mais tout cela pour dire que ça été une bonne surprise finalement.\n",
+    "- l’échantillonnage : 8 sortes de cafés différents dans une offre découverte intéressante et variée. Attention toutefois à ceux qui aiment les cafés pas trop forts car ils sont classés force 6 à 11. Je nuancerai tout de même cette remarque sur la force des cafés car étant habituée aux cafés Cosi et Volluto (force 4) de Nespresso j'ai vraiment apprécié le Starbucks Blonde force 6 qui n'était pas si fort que ça.\n",
+    "Il y en a donc pour tous les goûts selon moi dans ce pack et les dosettes de décaféiné sont un plus (en particulier quand on a de la visite).\n",
+    "Le rapport qualité prix est bon 80 dosettes pour 26€ c'est moins que pour les capsules standard.\n",
+    "\n",
+    "On aime moins :\n",
+    "- Comme pour les dosettes Nespresso le gros point noir c'est l’aluminium ! Oui les dosettes se recyclent, oui c'est le matériau qui conserve le mieux l'arôme du café, mais ça reste mauvais pour l'environnement comme pour la santé. Et oui il existe des marques qui proposent des dosettes dans d'autres matériaux mais ces capsules n'étant pas parfaitement adaptées à la machine elles réduisent sa durée de vie et la qualité du café n'est pas la même. A quand les dosettes Nespresso écolo ? :)\n",
+    "\n",
+    "Malgré cela, on craque parce que le café... c'est notre point faible !\n",
+    "Ces dosettes ? On les recommande à tous les curieux, les amateurs de café Starbucks, Nespresso ou juste de café un peu corsé. On a aimé accompagner d'une noisette de lait, et un petit biscuit (spéculoos) ou d'un carré de chocolat noir. Elles suscitent la curiosité des proches quand on reçoit, et ont été appréciées par ceux qui les ont goûtées autour de nous.\n",
+    "\n",
+    "Reçu rapidement (prime) et en bon état, rien à redire sur la livraison. On recommande !!\n",
+    "\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- \"mon conjoint et moi sommes des consommateurs réguliers de Starbucks comme de café Nespresso\" : il manque l'article devant \"café Nespresso\", il faudrait écrire \"du café Nespresso\".\n",
+      "- \"Alors une fois le partenaria lancé\" : il manque une lettre, il faudrait écrire \"partenariat\".\n",
+      "- \"on valide sans s'extasier\" : il manque l'article devant \"on\", il faudrait écrire \"nous validons\".\n",
+      "- \"si on apprécie les arômes de ces dosettes assez corsées\" : il manque l'article devant \"si\", il faudrait écrire \"si l'on apprécie\".\n",
+      "- \"on n'a pas vraiment senti les 'note de noisette' ou 'note de caramel'\" : il manque l'article devant \"note\", il faudrait écrire \"les notes de noisette\" et \"les notes de caramel\".\n",
+      "- \"c'est le house Blend (maron clair)\" : il manque une lettre, il faudrait écrire \"le House Blend (marron clair)\".\n",
+      "- \"Bon chacun ses préférences et ses goûts\" : il manque l'article devant \"chacun\", il faudrait écrire \"Eh bien, chacun a ses préférences et ses goûts\".\n",
+      "- \"ça été une bonne surprise\" : il y a une faute de conjugaison, il faudrait écrire \"ça a été une bonne surprise\".\n",
+      "- \"l’échantillonnage\" : il manque l'article devant \"échantillonnage\", il faudrait écrire \"l'échantillonnage\".\n",
+      "- \"Je nuancerai tout de même cette remarque sur la force des cafés\" : il manque l'article devant \"remarque\", il faudrait écrire \"Je nuancerai tout de même cette remarque sur la force des cafés\".\n",
+      "- \"Il y en a donc pour tous les goûts selon moi dans ce pack\" : il manque l'article devant \"tous les goûts\", il faudrait écrire \"Il y en a donc pour tous les goûts selon moi dans ce pack\".\n",
+      "- \"les dosettes de décaféiné\" : il manque l'article devant \"décaféiné\", il faudrait écrire \"les dosettes de décaféiné\".\n",
+      "- \"c'est moins que pour les capsules standard\" : il manque l'article devant \"capsules\", il faudrait écrire \"les capsules standard\".\n",
+      "- \"Comme pour les dosettes Nespresso le gros point noir c'est l’aluminium !\" : il manque une virgule après \"Nespresso\", il faudrait écrire \"Comme pour les dosettes Nespresso, le gros point noir c'est l’aluminium !\".\n",
+      "- \"mais ça reste mauvais pour l'environnement comme pour la santé\" : il manque l'article devant \"environnement\", il faudrait écrire \"mais cela reste mauvais pour l'environnement comme pour la santé\".\n",
+      "- \"Et oui il existe des marques qui proposent des dosettes dans d'autres matériaux\" : il manque une majuscule à \"et\", il faudrait écrire \"Et oui, il existe des marques qui proposent des dosettes dans d'autres matériaux\".\n",
+      "- \"elles réduisent sa durée de vie\" : il manque l'article devant \"durée de vie\", il faudrait écrire \"réduisent la durée de vie\".\n",
+      "- \"On a aimé accompagner d'une noisette de lait\" : il manque l'article devant \"noisette\", il faudrait écrire \"On a aimé l'accompagner d'une noisette de lait\".\n",
+      "- \"Elles suscitent la curiosité des proches quand on reçoit\" : il manque l'article devant \"curiosité\", il faudrait écrire \"Elles suscitent la curiosité des proches quand on les reçoit\".\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Quelles sont les fautes de français dans la revue de produit suivante?\n",
+    "\n",
+    "La revue est délimitée par des triples apostrophes.\n",
+    "\n",
+    "Revue : '''{amazon_review}'''\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:47:53.627252Z",
+     "start_time": "2023-05-11T08:46:42.509787Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Sentiment\": \"positif\",\n",
+      "  \"Colère\": false,\n",
+      "  \"Article\": \"dosettes de café Starbucks pour machine Nespresso\",\n",
+      "  \"Prix\": \"26€ pour 80 dosettes\",\n",
+      "  \"Marque\": \"Starbucks et Nespresso\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Identifiez les éléments suivants dans le texte de la revue :\n",
+    "- Sentiment (positif ou négatif)\n",
+    "- L'auteur du commentaire exprime-t-il de la colère ? (vrai ou faux)\n",
+    "- Article acheté par l'auteur de l'évaluation\n",
+    "- Prix de l'article\n",
+    "- Entreprise qui a fabriqué l'article\n",
+    "\n",
+    "L'avis est délimité par des triples apostrophes.\n",
+    "Formulez votre réponse sous la forme d'un objet JSON contenant les éléments suivants\n",
+    "\"Sentiment\", \"Colère\", \"Article\", \"Prix\" et \"Marque\" comme clés.\n",
+    "Si l'information n'est pas présente, utilisez \"inconnu\"\n",
+    "comme valeur.\n",
+    "Faites en sorte que votre réponse soit aussi courte que possible.\n",
+    "Formulez la valeur \"Colère\" comme une valeur booléenne.\n",
+    "\n",
+    "Texte de la critique : '''{amazon_review}'''\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:09:50.653256Z",
+     "start_time": "2023-05-11T12:09:45.785153Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Inferring topics"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
     "story = \"\"\"\n",
     "In a recent survey conducted by the government,\n",
     "public sector employees were asked to rate their level\n",
@@ -539,7 +678,11 @@
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:12:18.946377Z",
+     "start_time": "2023-05-11T12:12:18.936313Z"
+    }
    }
   },
   {
@@ -553,11 +696,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "government survey, job satisfaction, NASA, Social Security Administration, employee satisfaction\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Determine five topics that are being discussed in the \\\n",
+    "Determine five topics that are being discussed in the\n",
     "following text, which is delimited by triple backticks.\n",
     "\n",
     "Make each item one or two words long.\n",
@@ -570,23 +721,40 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:12:23.151691Z",
+     "start_time": "2023-05-11T12:12:21.003321Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['government survey',\n 'job satisfaction',\n 'NASA',\n 'Social Security Administration',\n 'employee satisfaction']"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "response.split(sep=',')"
+    "response.split(sep=', ')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:12:28.004683Z",
+     "start_time": "2023-05-11T12:12:27.987323Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "topic_list = [\n",
@@ -595,7 +763,11 @@
     "]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:14:50.566817Z",
+     "start_time": "2023-05-11T12:14:50.546323Z"
+    }
    }
   },
   {
@@ -609,15 +781,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nasa: 1\n",
+      "local government: 0\n",
+      "engineering: 0\n",
+      "employee satisfaction: 1\n",
+      "federal government: 1\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Determine whether each item in the following list of \\\n",
+    "Determine whether each item in the following list of\n",
     "topics is a topic in the text below, which\n",
     "is delimited with triple backticks.\n",
     "\n",
-    "Give your answer as list with 0 or 1 for each topic.\\\n",
+    "Give your answer as list with 0 or 1 for each topic.\n",
     "\n",
     "List of topics: {\", \".join(topic_list)}\n",
     "\n",
@@ -627,26 +811,44 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:14:54.822330Z",
+     "start_time": "2023-05-11T12:14:52.019858Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALERT: New NASA story!\n"
+     ]
+    }
+   ],
    "source": [
     "topic_dict = {i.split(': ')[0]: int(i.split(': ')[1]) for i in response.split(sep='\\n')}\n",
     "if topic_dict['nasa'] == 1:\n",
     "    print(\"ALERT: New NASA story!\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:17:04.357069Z",
+     "start_time": "2023-05-11T12:17:04.349433Z"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Try experimenting on your own!"
+    "## Try experimenting on your own!\n",
+    "\n",
+    "### Output JSON for news alert"
    ],
    "metadata": {
     "collapsed": false
@@ -654,11 +856,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"nasa\": 1,\n",
+      "  \"local government\": 0,\n",
+      "  \"engineering\": 0,\n",
+      "  \"employee satisfaction\": 1,\n",
+      "  \"federal government\": 1\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Determine whether each item in the following list of\n",
+    "topics is a topic in the text below, which\n",
+    "is delimited with triple backticks.\n",
+    "\n",
+    "Give your answer as a JSON object with 0 or 1 for each topic.\n",
+    "\n",
+    "List of topics: {\", \".join(topic_list)}\n",
+    "\n",
+    "Text sample: '''{story}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:18:06.977537Z",
+     "start_time": "2023-05-11T12:18:03.027290Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALERT: New NASA story!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "topic_dict = json.loads(response)\n",
+    "if topic_dict['nasa'] == 1:\n",
+    "    print(\"ALERT: New NASA story!\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:18:39.312342Z",
+     "start_time": "2023-05-11T12:18:39.281776Z"
+    }
    }
   }
  ],
