Add another translation

--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import openai\n",
@@ -27,12 +27,16 @@
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:27:29.202405Z",
+     "start_time": "2023-05-11T12:27:28.966905Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0):\n",
@@ -45,7 +49,11 @@
     "    return response.choices[0].message[\"content\"]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:27:32.842100Z",
+     "start_time": "2023-05-11T12:27:32.836239Z"
+    }
    }
   },
   {
@@ -61,8 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, me gustaría ordenar una licuadora.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following English text to Spanish:\n",
@@ -72,13 +88,25 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:29:14.857148Z",
+     "start_time": "2023-05-11T12:29:13.327801Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is French.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me which language this is:\n",
@@ -88,13 +116,27 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:30:05.625426Z",
+     "start_time": "2023-05-11T12:30:04.331583Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "French: Je veux commander un ballon de basket\n",
+      "Spanish: Quiero ordenar un balón de baloncesto\n",
+      "English Pirate: Arrr, I be wantin' to order a basketball, matey!\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following  text to French and Spanish\n",
@@ -105,13 +147,26 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:30:31.351342Z",
+     "start_time": "2023-05-11T12:30:27.178257Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formal: ¿Le gustaría ordenar una almohada?\n",
+      "Informal: ¿Te gustaría ordenar una almohada?\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following text to Spanish in both the\n",
@@ -122,7 +177,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:31:08.925798Z",
+     "start_time": "2023-05-11T12:31:05.971594Z"
+    }
    }
   },
   {
@@ -137,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "user_messages = [\n",
@@ -149,13 +208,44 @@
     "]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:32:15.128532Z",
+     "start_time": "2023-05-11T12:32:15.116351Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original message (This is French.): La performance du système est plus lente que d'habitude.\n",
+      "English: The system performance is slower than usual.\n",
+      "Korean: 시스템 성능이 평소보다 느립니다. \n",
+      "\n",
+      "Original message (This is Spanish.): Mi monitor tiene píxeles que no se iluminan.\n",
+      "English: My monitor has pixels that don't light up.\n",
+      "Korean: 내 모니터에는 불이 켜지지 않는 픽셀이 있습니다. \n",
+      "\n",
+      "Original message (This is Italian.): Il mio mouse non funziona\n",
+      "English: My mouse is not working.\n",
+      "Korean: 내 마우스가 작동하지 않습니다. \n",
+      "\n",
+      "Original message (This is Polish.): Mój klawisz Ctrl jest zepsuty\n",
+      "English: My Ctrl key is broken\n",
+      "Korean: 제 Ctrl 키가 고장 났어요 \n",
+      "\n",
+      "Original message (This is Chinese (Simplified).): 我的屏幕在闪烁\n",
+      "English: My screen is flickering.\n",
+      "Korean: 내 화면이 깜빡입니다. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for issue in user_messages:\n",
     "    prompt = f\"Tell me what language this is: ```{issue}```\"\n",
@@ -170,7 +260,11 @@
     "    print(response, \"\\n\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:32:45.086105Z",
+     "start_time": "2023-05-11T12:32:26.248109Z"
+    }
    }
   },
   {
@@ -185,11 +279,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original message (FR): La performance du système est plus lente que d'habitude.\n",
+      "English: The system performance is slower than usual.\n",
+      "Korean: 시스템 성능이 평소보다 느립니다. \n",
+      "\n",
+      "Original message (ES): Mi monitor tiene píxeles que no se iluminan.\n",
+      "English: My monitor has pixels that don't light up.\n",
+      "Korean: 제 모니터에는 불이 켜지지 않는 픽셀이 있습니다. \n",
+      "\n",
+      "Original message (IT): Il mio mouse non funziona\n",
+      "English: My mouse is not working.\n",
+      "Korean: 내 마우스가 작동하지 않습니다. \n",
+      "\n",
+      "Original message (The language is Polish and the ISO 639-1 code is \"PL\".): Mój klawisz Ctrl jest zepsuty\n",
+      "English: My Ctrl key is broken\n",
+      "Korean: 제 Ctrl 키가 고장 났어요 \n",
+      "\n",
+      "Original message (ZH): 我的屏幕在闪烁\n",
+      "English: My screen is flickering.\n",
+      "Korean: 내 화면이 깜빡입니다. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for issue in user_messages:\n",
+    "    prompt = f\"Determine what language this is and only show the corresponding ISO 639-1 code in uppercase: ```{issue}```\"\n",
+    "    lang = get_completion(prompt)\n",
+    "    print(f\"Original message ({lang}): {issue}\")\n",
+    "\n",
+    "    prompt = f\"\"\"\n",
+    "    Translate the following  text to English\n",
+    "    and Korean: ```{issue}```\n",
+    "    \"\"\"\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response, \"\\n\")"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:37:22.903393Z",
+     "start_time": "2023-05-11T12:37:05.249983Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"translation\": \"I feel like this is going to end badly! Let's get out of here.\",\n",
+      "    \"language\": \"French\",\n",
+      "    \"code\": \"fr\"\n",
+      "}\n",
+      "{\n",
+      "    \"translation\": \"My mouse is not working.\",\n",
+      "    \"language\": \"Italian\",\n",
+      "    \"code\": \"it\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages = [\n",
+    "    \"Je sens que tout ça va mal finir ! On se casse.\",\n",
+    "    \"Il mio mouse non funziona.\"\n",
+    "]\n",
+    "for message in messages:\n",
+    "    prompt = f\"\"\"\n",
+    "    Traduis le texte entre trois guillemets en anglais, trouve le nom de la langue et son code ISO 639-1.\n",
+    "\n",
+    "    Formule la réponse sous la forme d'un objet JSON avec les clés \"translation\", \"language\", \"code\".\n",
+    "\n",
+    "    ```{message}```\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T12:49:42.661453Z",
+     "start_time": "2023-05-11T12:49:35.583967Z"
+    }
    }
   },
   {
