Spelling. Try to fix prompt.

--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -387,8 +387,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear Sir/Madam,\n",
+      "\n",
+      "I am writing to bring to your attention a standing lamp that I believe may be of interest to you. Please find attached the specifications for your review.\n",
+      "\n",
+      "Thank you for your time and consideration.\n",
+      "\n",
+      "Sincerely,\n",
+      "\n",
+      "Joe\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Translate the following from slang to a business letter:\n",
@@ -398,7 +414,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:09:33.987726Z",
+     "start_time": "2023-05-11T13:09:29.793782Z"
+    }
    }
   },
   {
@@ -413,10 +433,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table>\n",
+      "  <caption>Restaurant Employees</caption>\n",
+      "  <thead>\n",
+      "    <tr>\n",
+      "      <th>Name</th>\n",
+      "      <th>Email</th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <td>Shyam</td>\n",
+      "      <td>shyamjaiswal@gmail.com</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>Bob</td>\n",
+      "      <td>bob32@gmail.com</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <td>Jai</td>\n",
+      "      <td>jai87@gmail.com</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
    "source": [
-    "data_json = { \"resturant employees\" :[\n",
+    "data_json = { \"restaurant employees\" :[\n",
     "    {\"name\":\"Shyam\", \"email\":\"shyamjaiswal@gmail.com\"},\n",
     "    {\"name\":\"Bob\", \"email\":\"bob32@gmail.com\"},\n",
     "    {\"name\":\"Jai\", \"email\":\"jai87@gmail.com\"}\n",
@@ -430,19 +480,36 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:10:36.754701Z",
+     "start_time": "2023-05-11T13:10:25.099179Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table>\n  <caption>Restaurant Employees</caption>\n  <thead>\n    <tr>\n      <th>Name</th>\n      <th>Email</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>Shyam</td>\n      <td>shyamjaiswal@gmail.com</td>\n    </tr>\n    <tr>\n      <td>Bob</td>\n      <td>bob32@gmail.com</td>\n    </tr>\n    <tr>\n      <td>Jai</td>\n      <td>jai87@gmail.com</td>\n    </tr>\n  </tbody>\n</table>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display, Markdown, HTML\n",
     "display(HTML(response))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:10:49.582972Z",
+     "start_time": "2023-05-11T13:10:49.551255Z"
+    }
    }
   },
   {
@@ -460,8 +527,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The girl with the black and white puppies has a ball.\n",
+      "No errors found.\n",
+      "\"It's going to be a long day. Does the car need its oil changed?\"\n",
+      "There goes my freedom. They're going to bring their suitcases.\n",
+      "You're going to need your notebook.\n",
+      "\"That medicine affects my ability to sleep. Have you heard of the butterfly effect?\"\n",
+      "This phrase is to check chatGPT for spelling ability.\n"
+     ]
+    }
+   ],
    "source": [
     "text = [\n",
     "    \"The girl with the black and white puppies have a ball.\",  # The girl has a ball.\n",
@@ -474,15 +555,19 @@
     "]\n",
     "for t in text:\n",
     "    prompt = f\"\"\"Proofread and correct the following text\n",
-    "    and rewrite the corrected version. If you don't find\n",
+    "    and only display the corrected version. If you don't find\n",
     "    and errors, just say \"No errors found\". Don't use\n",
-    "    any punctuation around the text:\n",
+    "    quotes around the text and don't print the original text:\n",
     "    ```{t}```\"\"\"\n",
     "    response = get_completion(prompt)\n",
     "    print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:17:50.406384Z",
+     "start_time": "2023-05-11T13:17:38.170784Z"
+    }
    }
   },
   {
